package rust.tinyspring.context;

import rust.tinyspring.beans.factory.config.ConfigurableBeanFactory;

public interface ApplicationContext extends ConfigurableBeanFactory {
}